# creditAI-backend

./: main.py  pyproject.toml  requirements.base.txt  requirements.txt  saml.py
.github/workflows/: main_app-creditai-qa-001.yml
microservices_architecture/: .env
microservices_architecture/services/AI_analysis/: .env
saml/: advanced_settings.json
services/AI_analysis/: main.py  model.py  requirements.txt  test_env.py
services/AI_analysis/api/: endpoints.py
services/AI_analysis/core/: aianalysis.py
services/account_overview/: main.py  model.py  pyproject.toml  requirements.txt
services/account_overview/api/: endpoints.py
services/account_overview/core/: account_processor.py
services/financial_statement/: main.py  pyproject.toml  requirements.txt
services/financial_statement/api/: endpoints.py
services/financial_statement/core/: financial_api.py
shared/: azure_openai_client.py  config.py  models.py
