[project]
name = "microservices-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "services/financial_statement",
    "services/account_overview",
    "services/ai_analysis",
]
